# slaps-roof-of-wallet

./: Cargo.toml  TODO.txt
wallet-core/: Cargo.toml
wallet-core/src/: devices.rs  lib.rs  signer.rs  wallet.rs
wallet-ui/: Cargo.toml
wallet-ui/src/: data.rs  delegate.rs  main.rs  selectors.rs  view.rs
