[package]
name = "wallet-core"
version = "0.1.0"
authors = ["Paul Miller <paul@pauljmiller.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { git="https://github.com/bitcoindevkit/bdk", rev="010b7ee" }
hwi = { git="https://github.com/bitcoindevkit/rust-hwi/", rev="8975a5e" }
base64 = "0.13.0"
