[package]
name = "wallet-ui"
version = "0.1.0"
authors = ["Paul Miller <paul@pauljmiller.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wallet-core = { path = "../wallet-core" }
druid = { git = "https://github.com/linebender/druid", rev="65eb306", features=["im"] }
